frontend-nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  namespace: vcluster-customer-b
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
spec:
  rules:
   - host: example.com
     http:
      paths:
      - path: /*
        pathType: Prefix
        backend:
          service:
            name: front-end
            port:
              number: 80
